--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Differentialevolution</h1>
-      <h2 class="project-tagline">Implementation of (micro) Differential Evolution algorithm for global optimization</h2>
+      <h1 class="project-name">Differential Evolution</h1>
+      <h2 class="project-tagline">Implementation of (micro) Differential Evolution algorithms for global optimization</h2>
       <a href="https://github.com/salehinejad/DifferentialEvolution" class="btn">View on GitHub</a>
       <a href="https://github.com/salehinejad/DifferentialEvolution/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/salehinejad/DifferentialEvolution/tarball/master" class="btn">Download .tar.gz</a>
@@ -20,7 +20,7 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Why Differential Evolution?</h3>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/salehinejad/DifferentialEvolution">Differentialevolution</a> is maintained by <a href="https://github.com/salehinejad">salehinejad</a>.</span>
