--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Why Differential Evolution?</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Optimization with Differential Evolution</h3>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/salehinejad/DifferentialEvolution">Differentialevolution</a> is maintained by <a href="https://github.com/salehinejad">salehinejad</a>.</span>
